--- a/src/NP.Ava.UniDock.csproj
+++ b/src/NP.Ava.UniDock.csproj
@@ -3,7 +3,7 @@
 		<OutputType>Library</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
-		<PackageId>NP.Ava.UniDock</PackageId>
+		<PackageId>Etk.UniDock</PackageId>
 		<PackageVersion>1.0.6</PackageVersion>
 		<Authors>Nick Polyak, Ph. D.</Authors>
 		<Company>AWebPros</Company>
@@ -23,12 +23,7 @@
 		<None Remove="*.nupkg" />
 		<None Remove="NP.Ava.UniDock.nuspec" />
 	</ItemGroup>
-	<ItemGroup Condition="'$(Configuration)'=='Debug'">
-		<ProjectReference Include="$(SolutionDir)..\..\SubModules\NP.Ava.Visuals\src\NP.Ava.Visuals.csproj" />
-		<ProjectReference Include="$(SolutionDir)..\..\SubModules\NP.Avalonia.UniDockService\src\NP.Ava.UniDockService.csproj" />
-		<ProjectReference Include="$(SolutionDir)..\..\SubModules\NP.DependencyInjection\src\NP.DependencyInjection.csproj" />
-	</ItemGroup>
-	<ItemGroup Condition="'$(Configuration)'=='Release'">
+	<ItemGroup>
 		<PackageReference Include="NP.Ava.Visuals" Version="1.0.5" />
 		<PackageReference Include="NP.Ava.UniDockService" Version="1.0.2" />
 		<PackageReference Include="NP.DependencyInjection" Version="1.0.9" />
